# ChangeLog for media-gfx/imagemagick
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.354 2009/06/02 18:16:52 klausman Exp $

  02 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  imagemagick-6.5.2.9.ebuild:
  Stable on alpha, bug #271502

  31 May 2009; Markus Meier <maekke@gentoo.org> imagemagick-6.5.2.9.ebuild:
  amd64 stable, bug #271502

  31 May 2009; Jeroen Roovers <jer@gentoo.org> imagemagick-6.5.2.9.ebuild:
  Stable for HPPA (bug #271502).

  30 May 2009; Brent Baude <ranger@gentoo.org> imagemagick-6.5.2.9.ebuild:
  Marking imagemagick-6.5.2.9 ppc64 and ppc for bug 271502

  29 May 2009; Ferris McCormick <fmccor@gentoo.org>
  imagemagick-6.5.2.9.ebuild:
  Sparc stable, Security bug #271502.

  29 May 2009; Christian Faulhammer <fauli@gentoo.org>
  imagemagick-6.5.2.9.ebuild:
  stable x86, security bug 271502

*imagemagick-6.5.2.9 (29 May 2009)

  29 May 2009; Markus Meier <maekke@gentoo.org> +imagemagick-6.5.2.9.ebuild:
  version bump wrt security bug #271502

*imagemagick-6.5.2.7 (24 May 2009)

  24 May 2009; Markus Meier <maekke@gentoo.org> -imagemagick-6.4.8.3.ebuild,
  -imagemagick-6.4.9.2.ebuild, +imagemagick-6.5.2.7.ebuild:
  version bump, RESTRICT userpriv when perl USE-flag is enabled wrt bug
  #269448, fixes bug #269987, improve message in src_test, remove old

  22 May 2009; Raúl Porcel <armin76@gentoo.org> imagemagick-6.5.1.0.ebuild:
  arm/ia64//s390/sh stable wrt #268858

  15 May 2009; Markus Meier <maekke@gentoo.org> imagemagick-6.5.1.0.ebuild:
  amd64 stable, bug #268858

  11 May 2009; Christian Faulhammer <fauli@gentoo.org>
  imagemagick-6.5.1.0.ebuild:
  stable x86, bug 268858

  11 May 2009; Brent Baude <ranger@gentoo.org> imagemagick-6.5.1.0.ebuild:
  stable ppc64, bug 268858

  10 May 2009; Jeroen Roovers <jer@gentoo.org> imagemagick-6.5.1.0.ebuild:
  Stable for HPPA (bug #268858).

  10 May 2009; Mounir Lamouri <volkmar@gentoo.org>