@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.354 2009/06/02 18:16:52 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.355 2009/06/02 22:24:31 maekke Exp $
+
+  02 Jun 2009; Markus Meier <maekke@gentoo.org> imagemagick-6.5.2.9.ebuild:
+  remove >=sys-devel/gcc-4.3.0[openmp] dep for USE=openmp, as it was
+  before...
 
   02 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
   imagemagick-6.5.2.9.ebuild:
